Blog 2/azuredeploy.json

{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "owner": {
            "type": "string",
            "defaultValue": "Your Name",
            "metadata": {
                "description": "The owner / developer of the resource"
            }
        },
        "bastionPublicKey": {
            "type": "string",
            "defaultValue": "ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAn3hmW2g/7WLlGDHAh+DMCmf3SDEBRtf+0qEE2dWUlCAwwJiBCNK3nXYPfBxjsXSumai3TowGbGUwgm4Bfs7W2sqaYNVt71Mb/tlZVa7rodufEd45/rPhIBbjgsTcWmP+PjWeLOr3NizT7z2K55a8utqZGlaxsGMx34yUjnt39pJ6G8EycgR03Bm+RJS2Beq6xN1gKyGjemp4Y1t8n4NjuETAovrJ2CqVuwL0Tiqaq3+Rypcz67TZe7QdXfvi9A9RQWBfA2ZwVDdA98mkbNtbqR5IPludRVBziM2Ag1iP6aGIc86ZlTrqfvrSwCTJEPOkJmKTHriIg3BdObfcEOFmFQ== rsa-key-20180430",
            "metadata": {
                "description": "the public key starting with rsa"
            }
        },
        "centosPublicKey": {
            "type": "string",
            "defaultValue": "ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAuVBksOBMTUmHAkOlZ2TJHaSQ4UyamZXuJ+9zIZMj3amyFMUp0cX0zfKqC/n1+N85zxPWJsBHvyp+5ulh+XsFvEQiLnQjakeQOigksZKEnpSmR0qPNhmqH0QBcroQm8bz666/+yt6io7tfQLCZRQN8OfsU7uZSyYAcGb6YoDSD0xjO/jgfgSrT3yxI/yWFpRh0Vej+1LGXnC43CTAYNB65P96WMf9Q4frMzRGb1UcEdQk+G44ZeQpVLwYeBYzqBrJ8NNYzOo/FzgAnMTtP2bBKhk9CBHpolxflmhxuvLdOtl6Pw/84gLdikkPB9ZsZlyUG9Hv2RbNynI/b/Xh6unx9w== rsa-key-20180430",
            "metadata": {
                "description": "the public key starting with rsa"
            }
        },
        "windowsAdminPassword": {
           "type": "string",
           "defaultValue": "123VerySecurePassword123",
           "metadata": {
                "description": "The password for the windows server"
            }
        }
    },
    "variables": {
        "location": "UKWest",
        "locationShort": "UKW",
        "environment": "DEV",
        "POC": "BLOG",
        "bastionSize": "Standard_B1s",
        "centosSize": "Standard_B1s",
        "windowsSize": "Standard_B2ms",
        "VNet_Name": "[concat(variables('POC'),'-VNET-','Network','-',variables('environment'),'-',variables('locationShort'))]",
        "subnet_DMZ_Name": "[concat(variables('POC'),'-VNET-Sub-','DMZ','-',variables('environment'),'-',variables('locationShort'))]",
        "subnet_Inside_1_Name": "[concat(variables('POC'),'-VNET-Sub-','centos','-',variables('environment'),'-',variables('locationShort'))]",
        "subnet_Inside_2_Name": "[concat(variables('POC'),'-VNET-Sub-','windows','-',variables('environment'),'-',variables('locationShort'))]",
        "NSG_DMZ_Name": "[concat(variables('POC'),'-NSG-','DMZ','-',variables('environment'),'-',variables('locationShort'))]",
        "NSG_Inside_1_Name": "[concat(variables('POC'),'-NSG-','centos','-',variables('environment'),'-',variables('locationShort'))]",
        "NSG_Inside_2_Name": "[concat(variables('POC'),'-NSG-','windows','-',variables('environment'),'-',variables('locationShort'))]",
        "VNET_AddressSpace": "10.0.0.0/16",
        "subnet_DMZ_AddressSpace": "10.0.0.0/29",
        "subnet_Inside_1_Name_AddressSpace": "10.0.0.32/27",
        "subnet_Inside_2_Name_AddressSpace": "10.0.0.64/27",
        "publicIpAddressName": "[concat(variables('POC'), '-PIP-', 'bastion','-', variables('environment'), '-', variables('locationShort'))]",
        "vnetRg": "[resourceGroup().name]",
        "vnetName": "[concat(variables('POC'),'-VNET-','Network','-',variables('environment'),'-',variables('locationShort'))]",
        "vnetId": "[resourceId(variables('vnetRg'),'Microsoft.Network/virtualNetworks',variables('vnetname'))]",
        "bastionName": "[concat(variables('POC'), '-VM-', 'bastion','-', variables('environment'), '-', variables('locationShort'))]",
        "bastionNetworkInterfaceName": "[concat(variables('POC'), '-NIC-', 'bastion','-', variables('environment'), '-', variables('locationShort'))]",
        "bastionVmSubnetName": "[concat(variables('POC'),'-VNET-Sub-','DMZ','-',variables('environment'),'-',variables('locationShort'))]",
        "bastionSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('bastionVMSubnetName'))]",
        "centosName": "[concat(variables('POC'), '-VM-', 'centos','-', variables('environment'), '-', variables('locationShort'))]",
        "centosNetworkInterfaceName": "[concat(variables('POC'), '-NIC-', 'centos','-', variables('environment'), '-', variables('locationShort'))]",
        "centosVmSubnetName": "[concat(variables('POC'),'-VNET-Sub-','DMZ','-',variables('environment'),'-',variables('locationShort'))]",
        "centosSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('centosVMSubnetName'))]",
        "windowsName": "[concat(variables('POC'), '-VM-', 'windows','-', variables('environment'), '-', variables('locationShort'))]",
        "windowsNetworkInterfaceName": "[concat(variables('POC'), '-NIC-', 'windows','-', variables('environment'), '-', variables('locationShort'))]",
        "windowsVmSubnetName": "[concat(variables('POC'),'-VNET-Sub-','DMZ','-',variables('environment'),'-',variables('locationShort'))]",
        "windowsSubnetRef": "[concat(variables('vnetId'), '/subnets/', variables('windowsVMSubnetName'))]"

    },
    "resources": [
        {
            "comments": "Virtual Network",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('VNet_Name')]",
            "apiVersion": "2017-10-01",
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('VNet_AddressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_DMZ_Name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_DMZ_AddressSpace')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_DMZ_Name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet_Inside_1_Name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_Inside_1_Name_AddressSpace')]",
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql",
                                    "locations": [
                                        "UK West",
                                        "UK South"
                                    ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "UK West"
                                    ]
                                }
                            ],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Inside_1_Name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet_Inside_2_Name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_Inside_2_Name_AddressSpace')]",
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql",
                                    "locations": [
                                        "UK West",
                                        "UK South"
                                    ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "UK West"
                                    ]
                                }
                            ]
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_DMZ_Name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Inside_1_Name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSG_Inside_1_Name'))]"
            ]
        },
        {
            "comments": "NSG - DMZ",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('NSG_DMZ_Name')]",
            "apiVersion": "2017-06-01",
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound_Custom",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "NSG - Inside_1",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('NSG_Inside_1_Name')]",
            "apiVersion": "2017-06-01",
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[variables('subnet_DMZ_AddressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound_Custom",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": []
            },
            "dependsOn": []
        },
        {
            "comments": "NSG - Inside_2",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('NSG_Inside_2_Name')]",
            "apiVersion": "2017-06-01",
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "[variables('subnet_DMZ_AddressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound_Custom",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": []
            },
            "dependsOn": []
        },
        {
            "name": "[variables('bastionName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2016-04-30-preview",
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "osProfile": {
                    "computerName": "bastion",
                    "adminUsername": "bastionroot",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', 'bastionroot', '/.ssh/authorized_keys')]",
                                    "keyData": "[parameters('bastionPublicKey')]"
                                }
                            ]
                        }
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[variables('bastionSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOS",
                        "sku": "7.4",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('bastionNetworkInterfaceName'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/',variables('bastionNetworkInterfaceName'))]"
            ]
        },
        {
            "name": "[variables('bastionNetworkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2016-09-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIpAddressName'))]",
                "[concat('Microsoft.Network/virtualNetworks/', variables('VNet_Name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('bastionSubnetRef')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpAddressName'))]"
                            },
                            "privateIPAllocationMethod": "Dynamic"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIpAddressName')]",
            "apiVersion": "2016-03-30",
            "location": "[variables('location')]",
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "name": "[variables('centosName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2016-04-30-preview",
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "osProfile": {
                    "computerName": "centos",
                    "adminUsername": "centosroot",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[concat('/home/', 'centosroot', '/.ssh/authorized_keys')]",
                                    "keyData": "[parameters('centosPublicKey')]"
                                }
                            ]
                        }
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[variables('centosSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOS",
                        "sku": "7.4",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType":"Standard_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('centosNetworkInterfaceName'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/',variables('centosNetworkInterfaceName'))]"
            ]
        },
        {
            "name": "[variables('centosNetworkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2016-09-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('VNet_Name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('centosSubnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('windowsName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2017-03-30",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/',variables('windowsNetworkInterfaceName'))]"
            ],
            "location": "[variables('location')]",
            "tags": {
                "Subscription": "[Subscription().displayName]",
                "POC": "[variables('POC')]",
                "RG": "[resourceGroup().name]",
                "Environment": "[variables('environment')]",
                "Owner": "[parameters('owner')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('windowsSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(variables('windowsName') ,'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType":"Standard_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "windows",
                    "adminUsername": "windowsadmin",
                    "adminPassword": "[parameters('windowsAdminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('windowsNetworkInterfaceName'))]"
                        }
                    ]
                }
            }
        },
        {
            "name": "[variables('windowsNetworkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2016-09-01",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('VNet_Name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('windowsSubnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
